# edp-python-sdk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_MANIFEST.json  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: BETA_COMMANDS.md  CLI_REFERENCE.md  DISTRIBUTED_RUNTIME.md  ENVLANG_REFERENCE.md  ENVX_CANONICAL.md  GEN2_AGENT_LAYER.md  GEN2_FINAL_STABLE.md  GEN2_MATH_LEARNING.md  GEN2_MEP_LLM.md  GEN2_MEP_LLM_SEPARATION.md  GEN2_NEGOTIATION_ATTENTION.md  GEN2_NOTES.md  GEN2_PERSISTENT_STORES.md  GEN2_RESEARCH_NOTES.md  GEN2_SEMANTIC_TENSOR_GRAPH.md  GEN2_STORE_ADAPTERS.md  GEN2_STORE_PROJECTIONS.md  GITHUB_PYPI_RELEASE.md  MIGRATION_TO_2_0_0.md  PROTOCOL_BETA.md  PROTOCOL_STABLE.md  QUICKSTART.md  RELEASE_PUBLISHING.md  TECHNICAL_ARCHITECTURE.md
drone_edp/: __init__.py  se3.py  swarm.py
edp_sdk/: __init__.py  analytics.py  canonical.py  contextualizer.py  core.py  envlang.py  intelligence.py  maintenance.py  operational.py  pathing.py  persistence.py  policy.py  protocol.py  release.py  savoir.py  semantics.py  store_adapters.py
examples/: __init__.py  cli.py  demo.py
mep_llm/: __init__.py  engine.py  providers.py  runtime.py  semantic.py
mep_tools/: __init__.py  envlang.py  llm_runtime.py  release.py  release_build.py  release_checks.py  schemas.py
scripts/: build_local.sh
tests/: test_generation2_iteration10.py  test_generation2_iteration11.py  test_generation2_iteration12.py  test_generation2_iteration2.py  test_generation2_iteration3.py  test_generation2_iteration4.py  test_generation2_iteration5.py  test_generation2_iteration6.py  test_generation2_iteration7.py  test_generation2_iteration8.py  test_generation2_iteration9.py  test_iteration1.py  test_iteration10.py  test_iteration11.py  test_iteration12.py  test_iteration13.py  test_iteration14.py  test_iteration15.py  test_iteration16.py  test_iteration17.py  test_iteration18.py  (+16 more)
(+5 files in other folders)
